<resources>
    <string name="app_name">Week7.2</string>

    <string name="app">О приложении</string>
    <string name="textAuthor">Автор: Шитикова Светлана Михайловна</string>
    <string name="telegram">Telegram: @Svtta_Shitikova</string>
    <string name="github">GitHub:</string>
    <string name="https_github">https://github.com/Svtta12</string>
    <string name="date">Дата создания: 21.06.2022</string>
    <string name="strength">Приложено сил: немерено!</string>
</resources>